--- a/contact.html
+++ b/contact.html
@@ -82,16 +82,16 @@
 			<a href="plan.html#pointer_plan"><p>Plan du site</p></a>
 			<div class="logo">
 				<a href="https://www.instagram.com/?hl=fr" target="_blank">
-					<img class="instagram" src="./img/instagram_logo.png">
+					<img class="instagram" src="./media/instagram_logo.png">
 				</a>
 				<a href="https://twitter.com/?lang=fr" target="_blank">
-					<img class="twitter"src="./img/twitter_logo.png">
+					<img class="twitter"src="./media/twitter_logo.png">
 				</a>
 				<a href="https://fr-ca.facebook.com/" target="_blank">
-					<img class="facebook"src="./img/facebook_logo.png">
+					<img class="facebook"src="./media/facebook_logo.png">
 				</a>
 				<a href="mailto:faurevincent.clement@gmail.com">
-					<img class="mail" src="./img/mail_logo.png">
+					<img class="mail" src="./media/mail_logo.png">
 				</a>
 			</div>
 		</div>
