--- a/plan.html
+++ b/plan.html
@@ -32,7 +32,7 @@
 		
 	<section>
 		<div class="title">
-			<h1># <span class="diff_color">P</span>an du site</h1>
+			<h1># <span class="diff_color">P</span>lan du site</h1>
 		</div>
 
 		<div class="content">
